Colab을 통해 생성됨

--- a/site/ko/tutorials/images/classification.ipynb
+++ b/site/ko/tutorials/images/classification.ipynb
@@ -90,17 +90,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "L1WtoaOHVrVh"
+      },
+      "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
+        "import PIL\n",
         "import tensorflow as tf\n",
-        "import pathlib"
-      ],
-      "metadata": {
-        "id": "u1LAfPdzC4qR"
-      },
-      "execution_count": 1,
-      "outputs": []
+        "\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.models import Sequential"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -128,6 +132,45 @@
         "  tulips/\n",
         "```"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "byHb4Dyjuozd",
+        "outputId": "306a1fd1-363e-46dd-f2fd-7275d54c5b87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Colab 작업공간으로 복사\n",
+        "!cp \"/content/drive/MyDrive/art_project/archive.zip\" /content/\n",
+        "\n",
+        "# 압축 해제\n",
+        "!unzip -q /content/archive.zip -d /content/wikiart_5class"
+      ],
+      "metadata": {
+        "id": "ORgdRrtIu3q0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
