Colab을 통해 생성됨

--- a/site/ko/tutorials/images/classification.ipynb
+++ b/site/ko/tutorials/images/classification.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "id": "L1WtoaOHVrVh"
       },
@@ -116,75 +116,27 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DPHx8-t-VrVo"
-      },
-      "source": [
-        "이 튜토리얼에서는 약 3,700장의 꽃 사진 데이터세트를 사용합니다. 데이터세트에는 클래스당 하나씩 5개의 하위 디렉터리가 있습니다.\n",
-        "\n",
-        "```\n",
-        "flower_photo/\n",
-        "  daisy/\n",
-        "  dandelion/\n",
-        "  roses/\n",
-        "  sunflowers/\n",
-        "  tulips/\n",
-        "```"
-      ]
-    },
-    {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": 8,
       "metadata": {
-        "id": "byHb4Dyjuozd",
-        "outputId": "306a1fd1-363e-46dd-f2fd-7275d54c5b87",
+        "id": "57CcilYSG0zv",
+        "outputId": "391b7196-f7e0-48b3-e960-9086751f87d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Colab 작업공간으로 복사\n",
-        "!cp \"/content/drive/MyDrive/art_project/archive.zip\" /content/\n",
-        "\n",
-        "# 압축 해제\n",
-        "!unzip -q /content/archive.zip -d /content/wikiart_5class"
       ],
-      "metadata": {
-        "id": "ORgdRrtIu3q0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "57CcilYSG0zv"
-      },
-      "outputs": [],
       "source": [
-        "import pathlib\n",
-        "\n",
-        "dataset_url = \"https://storage.googleapis.com/download.tensorflow.org/example_images/flower_photos.tgz\"\n",
-        "data_dir = tf.keras.utils.get_file('flower_photos.tar', origin=dataset_url, extract=True)\n",
-        "data_dir = pathlib.Path(data_dir).with_suffix('')"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -204,8 +156,11 @@
       },
       "outputs": [],
       "source": [
-        "image_count = len(list(data_dir.glob('*/*.jpg')))\n",
-        "print(image_count)"
+        "# Colab 작업공간으로 복사\n",
+        "!cp \"/content/drive/MyDrive/art_project/archive.zip\" /content/\n",
+        "\n",
+        "# 압축 해제\n",
+        "!unzip -q /content/archive.zip -d /content/wikiart_5class"
       ]
     },
     {
@@ -1205,7 +1160,6 @@
     "accelerator": "GPU",
     "colab": {
       "name": "classification.ipynb",
-      "toc_visible": true,
       "provenance": []
     },
     "kernelspec": {
